Fix for width overflow on LB page on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -282,6 +282,7 @@ section.news + h2 {
 
 .lb-section section {
 	padding: 135px 15px;
+	overflow: hidden;
 }
 .lb-section h3,
 .lb-section p {
